2005-08-22  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl : handle "type const *" parameters.
	* gdk/gdk-api-2.8.raw : regened probably from one of danw's parser
	fixes.  [Fixes #75844]

2005-08-22  Dan Winship  <danw@novell.com>

	* generator/Property.cs (Generate): Mark properties [Obsolete] if
	they or their accessors are marked deprecated. (Affects
	Gtk.Entry.Editable, Gtk.FontSelection.Font,
	Gtk.Notebook.*TabBorder, Gtk.Object.UserData, and a bunch of old
	Gtk.ProgressBar properties).

	* gtk/Gtk.metadata: Hide Entry.Editable. Mark Notebook.Homogeneous
	deprecated.

	* gtk/Entry.custom: Implement Editable property with an Obsolete
	pointing to IsEditable.

2005-08-22  Dan Winship  <danw@novell.com>

	* generator/CallbackGen.cs (Validate, MarshalType): if validation
	fails, set MarshalType to "" to propagate that failure into
	methods that have args of this type. [Fixes #75851]

2005-08-15  Peter Williams  <peter@newton.cx>

	* bootstrap-generic: New script, handles bootstrapping stuff generically
	and saves bootstrap settings so we can regenerate configure.in from 
	configure.in.in.

	* bootstrap
	* bootstrap-2.4
	* bootstrap-for-the-insane: Modify to use bootstrap-generic

	* Makefile.am (configure.in): Add a rule to run bootstrap.status to
	regenerate configure.in if configure.in.in changes.

2005-08-15  Mike Kestner  <mkestner@novell.com>

	* bootstrap : update for 2.5.90 release. 
	* bootstrap-2.4 : update for 2.3.90 release. 

2005-08-15  Mike Kestner  <mkestner@novell.com>

	* gtk/glue/makefile.win32 : s/.c/.o typo.

2005-08-15  Mike Kestner  <mkestner@novell.com>

	* pango/makefile.win32 : process symbols file at fixup target.

2005-08-15  Mike Kestner  <mkestner@novell.com>

	* sample/opaquetest/Makefile.am : make clean fixes
	* sample/valtest/Makefile.am : make clean fixes

2005-08-15  Dan Winship  <danw@novell.com>

	* sample/opaquetest/Makefile.am (EXTRA_DIST): add missing files
	(generated/*.cs): fix for srcdir!=builddir