@@ -1,3 +1,7 @@
+2005-08-22  Ben Maurer  <bmaurer@novell.com>
+
+	* gtk/NodeView.cs: Fix leak here. r=mkestner
+
 2005-08-22  Mike Kestner  <mkestner@novell.com>
 
 	* parser/gapi2xml.pl : handle "type const *" parameters.
